[project]
name = "gbfr-auto-restart"
version = "0.1.0-dev.0"
description = "Granblue Fantasy Relink Auto Restart"
authors = [{ name = "Dowon", email = "ks2515@naver.com" }]
dependencies = ["pyautogui", "pillow"]
requires-python = ">=3.11"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }

[project.optional-dependencies]
dev = ["black", "ruff", "pre-commit"]
build = ["nuitka>=2.0.3"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
